--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -14,9 +14,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Set up Ruby
-    - uses: ruby/setup-ruby@v1
-      with:
-        bundler-cache: true
+      uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
     - name: Install dependencies
       run: bundle install
     - name: Run tests
