Adds standardrb to recommended extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,8 @@
   "customizations": {
     "vscode": {
       "extensions": [
-        "Shopify.ruby-extensions-pack"
+        "Shopify.ruby-extensions-pack",
+        "testdouble.vscode-standard-ruby"
       ]
     }
   },
